# automl-enabled-autoresearch

./: .gitignore  README.md
baseline/: README.md  logging_lib.py  program.md  pyproject.toml  train.py
baseline/tests/fixtures/family_baselines/: logistic_regression.py
baseline/tests/integration/: test_multitask.py  test_notebook_runs.py
baseline/tests/unit/: test_decisions_schema.py  test_end_session.py  test_prepare.py  test_program_md.py
baseline/tools/: ingest_session.py  make_synthetic_session.py  smoke_test.py  start_session.py
experiments/: .gitattributes  ATTRIBUTION.md  EXPERIMENT_GUIDE.md  OPERATING.md  README.md  analysis.ipynb  arms.py  family_adapters.py  logging_lib.py  prepare.py  pyproject.toml  run_trial.py  train.py
experiments/playbook/: base.md
experiments/playbook/sections/: bo.md
experiments/tests/: conftest.py
experiments/tests/fixtures/: make_tiny_synthetic.py  pilot_c1_creditg.jsonl  tiny_synthetic.npz
experiments/tests/integration/: test_check_ceiling.py  test_family_adapters_fit.py  test_load_task.py  test_multitask.py  test_notebook_runs.py  test_run_bo_episode.py  test_run_reference.py  test_run_trial_task.py  test_smoke_end_to_end.py  test_train_integrity.py  test_train_lr.py  test_train_mlp.py  test_train_rf.py  (+1 more)
experiments/tools/: check_ceiling.py  compute_penalties.py  end_session.py  extract_decisions.py  fetch_datasets.py  ingest_session.py  make_synthetic_session.py  metrics.py  record_decision.py  run_bo.py  run_reference.py  run_reference_batch.py  smoke_test.py  start_session.py  validate_jsonl.py
(+19 files in other folders)
